package dominio.comunidades;

public enum TipoMiembro {
    AFECTADO,
    OBSERVADOR
}
