package dominio.comunidades;

public enum GradoDeConfianza {
    NO_CONFIABLE, CON_RESERVAS, CONFIABLE_NIVEL_1, CONFIABLE_NIVEL_2
}
